style(root): fix the white space in the app

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,14 +79,24 @@ body {
 }
 
 .calc__btn {
-  font-size: 1.8rem;
-  width: 6rem;
-  height: 6rem;
   border-radius: 0.5rem;
   box-shadow: -8px -8px 15px rgba(225, 225, 255, 0.1),
     5px 5px 15px rgba(0, 0, 0, 0.2);
   color: var(--white);
-  margin: 1rem;
+}
+
+.btn-sub {
+  font-size: 1.5rem;
+  width: 5rem;
+  height: 5rem;
+  margin: 0.8rem;
+}
+
+.btn-main {
+  font-size: 1.8rem;
+  width: 6.4rem;
+  height: 6rem;
+  margin: 0.8rem;
 }
 
 .btn-secondary {
@@ -108,7 +118,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: var(--primary-black);
 }
 
@@ -124,9 +134,8 @@ body {
   display: flex;
   align-items: flex-end;
   width: 100%;
-  height: 6.5rem;
   gap: 1rem;
-  padding: 2rem;
+  padding: 1rem 2rem;
 }
 
 .calc__screen {
